BUG 8757: Downshift the chart to make room for the top legend.
QA: Retest.

--- a/app/styles/charts.sass
+++ b/app/styles/charts.sass
@@ -224,6 +224,12 @@
       bottom: 1px
 
 .chartArea.barChart.orientationDown
+  &.hasTopLegend
+    margin-top: 4em
+
+    .legendContainer
+      top: -4em
+
   .chartContainer
     overflow-x: hidden
     overflow-y: auto
